2021-04-11 Dusan Jocic <dusanjocic@msn>
	* [Console] Fixed problems with console tab and input
	* [Console] Specify console tab to dump in the log file

2021-04-10 Dusan Jocic <dusanjocic@msn>
	* [Libraries] Cleaning

2021-04-05 Dusan Jocic <dusanjocic@msn>
	* [Console] We are not using for a long time TTY console

2021-04-04 Dusan Jocic <dusanjocic@msn.com>
	* [Filesystem] Changed fs_debug logging option
	* [Engine] Fix mouse locking issues when the mouse would lock at the center of your screen
	* [Engine] Implemented Com_Clampi and simplified timeNudge
	* [SoundSystem] Don't play any sound if while application is minimized
	* [SoundSystem] Don't play any sound if while application is unfocused
	* [Engine] Allow sending "userinfo" while the menu is open
	* [Filesystem] Changed fs_debug logging option
	* [Client] Small fixes
	* [Client] Fixed floating-point errors in pitch angle
	* [Console] Implemented console tabs
	
2021-04-03 Dusan Jocic <dusanjocic@msn>
	* [RenderSystem} Addressed the problem with DPI inside the engine

2021-04-01 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Changed protocol version to 1001, 
	* [Engine] Changed port for the master server to 12950
	* [Engine] Changed port for the dedicated server to 12960
	* [Engine] Changed port for the authorize server to 12952
	* [Engine] Changed port for the message of the day server to 12950